@@ -23,11 +23,11 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
-    implementation 'com.oracle.database.jdbc:ojdbc8:21.1.0.0'
-    implementation 'org.springframework:spring-beans:5.2.0.RELEASE'
-    implementation 'org.springframework:spring-jdbc:5.2.0.RELEASE'
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
+    implementation 'org.springframework:spring-beans:5.3.0'
+    implementation 'org.springframework:spring-jdbc:5.3.0'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
